--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        java-version: '17'
+        distribution: 'temurin' # Az AdoptOpenJDK helyett használhatjuk a Temurin-t
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Run tests
-      run: mvn test
+    - name: Run tests and generate coverage report
+      run: mvn verify # Ez magában foglalja a teszteket és a Jacoco tesztlefedettségi jelentést
